--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ aldryn-apphooks-config==0.3.3
 aldryn-boilerplates==0.7.5
 aldryn-categories==1.1.0
 aldryn-common==1.0.4
+aldryn-gallery==0.5.0
 aldryn-newsblog==2.0.0
 aldryn-people==2.0.0
 aldryn-translation-tools==0.2.1
@@ -33,9 +34,11 @@ django-treebeard==4.2.0
 djangocms-admin-style==1.2.7
 djangocms-attributes-field==0.3.0
 djangocms-column==1.7.0
+djangocms-file==2.0.2
 djangocms-googlemap==1.1.1
 djangocms-installer==0.9.8
 djangocms-link==2.1.2
+djangocms-picture==2.0.6
 djangocms-snippet==2.0.0
 djangocms-style==2.0.2
 djangocms-text-ckeditor==3.5.0
