--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 aldryn-apphooks-config==0.3.3
+aldryn-background-image==0.1.1
 aldryn-boilerplates==0.7.5
 aldryn-categories==1.1.0
 aldryn-common==1.0.4
